# Ai-productivity-coach

./: .dockerignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  q_table.json  requirements.txt  test_env.py
app/: agent.py  env.py  grader.py  index.html  main.py  models.py  script.js  style.css
server/: app.py
