[project]
name = "ai-productivity-coach"
version = "1.0.0"
description = "RL-based AI Productivity Coach environment using Q-learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "requests==2.31.0",
    "numpy==1.26.4",
    "openai>=2.7.2",
    "aiofiles==23.2.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.openenv]
name = "ai-productivity-coach"
version = "1.0.0"
entry_point = "app.main:app"
tasks = ["easy", "medium", "hard"]